--- a/Dockerfile.zappay
+++ b/Dockerfile.zappay
@@ -1,5 +1,5 @@
-FROM node:10-alpine
+FROM node:14-alpine
 
-RUN apk add --no-cache bash git yarn openjdk8-jre python build-base linux-headers eudev-dev cups-dev
+RUN apk add --no-cache bash git yarn openjdk8-jre python python3 build-base linux-headers eudev-dev cups-dev
 RUN npm -g install lerna firebase-tools
 RUN firebase setup:emulators:firestore
