--- a/Dockerfile.zappay
+++ b/Dockerfile.zappay
@@ -1,6 +1,7 @@
 FROM node:14-alpine
 
-RUN apk add --no-cache bash git yarn openjdk8-jre python python2-dev python3 python3-dev build-base linux-headers eudev-dev cups-dev
+RUN apk add --no-cache bash git yarn openjdk8-jre python python2-dev python3 python3-dev \
+    build-base linux-headers eudev-dev cups-dev openssh
 RUN npm -g install lerna firebase-tools
 RUN firebase setup:emulators:firestore
 RUN pip3 install pre-commit
